fix random quote buttons align

--- a/src/Components/RandomQuote/Quote.scss
+++ b/src/Components/RandomQuote/Quote.scss
@@ -77,7 +77,7 @@ div {
       &#tweet-quote,
       &#tumblr-quote {
         float: left;
-        padding: 0px;
+        padding-left: 14px;
         padding-top: 8px;
         text-align: center;
         font-size: 1em;
